--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "babel-plugin-contracts",
-  "version": "1.2.0",
+  "name": "babel-plugin-contract",
+  "version": "1.0.0",
   "description": "Design by Contract for JavaScript via a Babel plugin.",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel --plugins syntax-flow,transform-flow-strip-types -d ./lib ./src",
-    "build-typed": "npm run build && babel --plugins ./lib,syntax-flow,transform-flow-strip-types -d ./lib-checked ./src",
-    "prepublish": "npm run build",
+    "build": "babel -d ./lib ./src",
+    "prepublishOnly": "npm run build",
     "pretest": "npm run build",
-    "test": "mocha ./test/index.js",
-    "test-checked": "npm run build-typed && CONTRACTS_USE_LIBCHECKED=1 mocha ./test/index.js",
+    "test": "CONTRACTS_SAVE_TRANSFORMED=1 mocha ./test/index.js",
     "watch": "NODE_WATCH=1 mocha --watch"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/codemix/babel-plugin-contracts"
+    "url": "https://github.com/rockie/babel-plugin-contracts"
   },
   "keywords": [
     "babel",
@@ -26,29 +24,23 @@
     "type check",
     "dbyc"
   ],
-  "author": "Charles Pick <charles@codemix.com>",
+  "author": "Rockie Guo <rockie@kitmi.com.au>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/codemix/babel-plugin-contracts/issues"
+    "url": "https://github.com/rockie/babel-plugin-contracts/issues"
   },
-  "homepage": "https://github.com/codemix/babel-plugin-contracts",
+  "homepage": "https://github.com/rockie/babel-plugin-contracts",
   "dependencies": {
-    "babel-generator": "^6.1.2"
+    "@babel/generator": "^7.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.1.0",
-    "babel-core": "^6.1.0",
-    "babel-plugin-syntax-class-properties": "^6.1.18",
-    "babel-plugin-syntax-flow": "^6.0.14",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
-    "babel-plugin-transform-flow-strip-types": "^6.0.14",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-polyfill": "^6.0.16",
-    "babel-preset-es2015": "^6.1.0",
-    "babel-preset-react": "^6.1.0",
-    "babel-preset-stage-0": "^6.1.18",
-    "babel-preset-stage-1": "^6.1.0",
-    "mocha": "~2.2.4",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "mocha": "^5.2.0",
     "should": "^6.0.1"
   }
 }
