--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-contract",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Design by Contract for JavaScript via a Babel plugin.",
   "main": "lib/index.js",
   "scripts": {
@@ -31,16 +31,25 @@
   },
   "homepage": "https://github.com/rockie/babel-plugin-contracts",
   "dependencies": {
-    "@babel/generator": "^7.7.4"
+    "core-js": "^3.6.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "mocha": "^5.2.0",
-    "should": "^6.0.1"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.9.0",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/register": "^7.9.0",    
+    "mocha": "^7.1.1",
+    "should": "^13.2.3"
+  },
+  "mocha": {
+    "reporter": "spec",
+    "require": [
+      "@babel/register",
+      "@babel/polyfill",
+      "should"
+    ],
+    "timeout": 30000
   }
 }
